--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -26,4 +26,4 @@ jobs:
           java-version: 11
 
       - name: Build with Ant
-        run: ant -noinput -buildfile build.xml
+        run: ant -noinput -buildfile HomeFrame.xml
